# serializer version: 1
# name: test_snapshots[select.wled_rgb_light_color_palette-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '* Color 1',
        '* Color Gradient',
        '* Colors 1&2',
        '* Colors Only',
        '* Random Cycle',
        'Analogous',
        'April Night',
        'Aqua Flash',
        'Atlantica',
        'Aurora',
        'Aurora 2',
        'Autumn',
        'Beach',
        'Beech',
        'Blink Red',
        'Breeze',
        'C9',
        'C9 2',
        'C9 New',
        'Candy',
        'Candy2',
        'Cloud',
        'Cyane',
        'Default',
        'Departure',
        'Drywet',
        'Fairy Reaf',
        'Fire',
        'Forest',
        'Grintage',
        'Hult',
        'Hult 64',
        'Icefire',
        'Jul',
        'Landscape',
        'Lava',
        'Light Pink',
        'Lite Light',
        'Magenta',
        'Magred',
        'Ocean',
        'Orange & Teal',
        'Orangery',
        'Party',
        'Pastel',
        'Pink Candy',
        'Rainbow',
        'Rainbow Bands',
        'Red & Blue',
        'Red Flash',
        'Red Reaf',
        'Red Shift',
        'Red Tide',
        'Retro Clown',
        'Rewhi',
        'Rivendell',
        'Sakura',
        'Semi Blue',
        'Sherbet',
        'Splash',
        'Sunset',
        'Sunset 2',
        'Temperature',
        'Tertiary',
        'Tiamat',
        'Toxy Reaf',
        'Vintage',
        'Yelblu',
        'Yelblu Hot',
        'Yellowout',
        'Yelmag',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.wled_rgb_light_color_palette',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Color palette',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Color palette',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'color_palette',
    'unique_id': 'aabbccddeeff_palette_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[select.wled_rgb_light_color_palette-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Color palette',
      'options': list([
        '* Color 1',
        '* Color Gradient',
        '* Colors 1&2',
        '* Colors Only',
        '* Random Cycle',
        'Analogous',
        'April Night',
        'Aqua Flash',
        'Atlantica',
        'Aurora',
        'Aurora 2',
        'Autumn',
        'Beach',
        'Beech',
        'Blink Red',
        'Breeze',
        'C9',
        'C9 2',
        'C9 New',
        'Candy',
        'Candy2',
        'Cloud',
        'Cyane',
        'Default',
        'Departure',
        'Drywet',
        'Fairy Reaf',
        'Fire',
        'Forest',
        'Grintage',
        'Hult',
        'Hult 64',
        'Icefire',
        'Jul',
        'Landscape',
        'Lava',
        'Light Pink',
        'Lite Light',
        'Magenta',
        'Magred',
        'Ocean',
        'Orange & Teal',
        'Orangery',
        'Party',
        'Pastel',
        'Pink Candy',
        'Rainbow',
        'Rainbow Bands',
        'Red & Blue',
        'Red Flash',
        'Red Reaf',
        'Red Shift',
        'Red Tide',
        'Retro Clown',
        'Rewhi',
        'Rivendell',
        'Sakura',
        'Semi Blue',
        'Sherbet',
        'Splash',
        'Sunset',
        'Sunset 2',
        'Temperature',
        'Tertiary',
        'Tiamat',
        'Toxy Reaf',
        'Vintage',
        'Yelblu',
        'Yelblu Hot',
        'Yellowout',
        'Yelmag',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgb_light_color_palette',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Default',
  })
# ---
# name: test_snapshots[select.wled_rgb_light_live_override-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '0',
        '1',
        '2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.wled_rgb_light_live_override',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Live override',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Live override',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'live_override',
    'unique_id': 'aabbccddeeff_live_override',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[select.wled_rgb_light_live_override-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Live override',
      'options': list([
        '0',
        '1',
        '2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgb_light_live_override',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_snapshots[select.wled_rgb_light_playlist-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.wled_rgb_light_playlist',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Playlist',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Playlist',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'playlist',
    'unique_id': 'aabbccddeeff_playlist',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[select.wled_rgb_light_playlist-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Playlist',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgb_light_playlist',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_snapshots[select.wled_rgb_light_preset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.wled_rgb_light_preset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Preset',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Preset',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'preset',
    'unique_id': 'aabbccddeeff_preset',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[select.wled_rgb_light_preset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Preset',
      'options': list([
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgb_light_preset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_snapshots[select.wled_rgb_light_segment_1_color_palette-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '* Color 1',
        '* Color Gradient',
        '* Colors 1&2',
        '* Colors Only',
        '* Random Cycle',
        'Analogous',
        'April Night',
        'Aqua Flash',
        'Atlantica',
        'Aurora',
        'Aurora 2',
        'Autumn',
        'Beach',
        'Beech',
        'Blink Red',
        'Breeze',
        'C9',
        'C9 2',
        'C9 New',
        'Candy',
        'Candy2',
        'Cloud',
        'Cyane',
        'Default',
        'Departure',
        'Drywet',
        'Fairy Reaf',
        'Fire',
        'Forest',
        'Grintage',
        'Hult',
        'Hult 64',
        'Icefire',
        'Jul',
        'Landscape',
        'Lava',
        'Light Pink',
        'Lite Light',
        'Magenta',
        'Magred',
        'Ocean',
        'Orange & Teal',
        'Orangery',
        'Party',
        'Pastel',
        'Pink Candy',
        'Rainbow',
        'Rainbow Bands',
        'Red & Blue',
        'Red Flash',
        'Red Reaf',
        'Red Shift',
        'Red Tide',
        'Retro Clown',
        'Rewhi',
        'Rivendell',
        'Sakura',
        'Semi Blue',
        'Sherbet',
        'Splash',
        'Sunset',
        'Sunset 2',
        'Temperature',
        'Tertiary',
        'Tiamat',
        'Toxy Reaf',
        'Vintage',
        'Yelblu',
        'Yelblu Hot',
        'Yellowout',
        'Yelmag',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.wled_rgb_light_segment_1_color_palette',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Segment 1 color palette',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Segment 1 color palette',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'segment_color_palette',
    'unique_id': 'aabbccddeeff_palette_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_snapshots[select.wled_rgb_light_segment_1_color_palette-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'WLED RGB Light Segment 1 color palette',
      'options': list([
        '* Color 1',
        '* Color Gradient',
        '* Colors 1&2',
        '* Colors Only',
        '* Random Cycle',
        'Analogous',
        'April Night',
        'Aqua Flash',
        'Atlantica',
        'Aurora',
        'Aurora 2',
        'Autumn',
        'Beach',
        'Beech',
        'Blink Red',
        'Breeze',
        'C9',
        'C9 2',
        'C9 New',
        'Candy',
        'Candy2',
        'Cloud',
        'Cyane',
        'Default',
        'Departure',
        'Drywet',
        'Fairy Reaf',
        'Fire',
        'Forest',
        'Grintage',
        'Hult',
        'Hult 64',
        'Icefire',
        'Jul',
        'Landscape',
        'Lava',
        'Light Pink',
        'Lite Light',
        'Magenta',
        'Magred',
        'Ocean',
        'Orange & Teal',
        'Orangery',
        'Party',
        'Pastel',
        'Pink Candy',
        'Rainbow',
        'Rainbow Bands',
        'Red & Blue',
        'Red Flash',
        'Red Reaf',
        'Red Shift',
        'Red Tide',
        'Retro Clown',
        'Rewhi',
        'Rivendell',
        'Sakura',
        'Semi Blue',
        'Sherbet',
        'Splash',
        'Sunset',
        'Sunset 2',
        'Temperature',
        'Tertiary',
        'Tiamat',
        'Toxy Reaf',
        'Vintage',
        'Yelblu',
        'Yelblu Hot',
        'Yellowout',
        'Yelmag',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.wled_rgb_light_segment_1_color_palette',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '* Random Cycle',
  })
# ---
